# boilerplate_flatbuffers_cmake

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
schemas/: CMakeLists.txt  dog.fbs
